--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
   
 	<link rel="shortcut icon" href="{% static '/images/favicon.ico' %}">	
 	<link rel="stylesheet" href="{% static '/css/style.css' %}">
+  <link rel="alternate" type="application/rss+xml" title="Chris Eidhof" href="/rss.xml" />
+  
 	
 </head>
 <body>
