--- a/templates/post.html
+++ b/templates/post.html
@@ -22,7 +22,7 @@
 	</section>
 	
 <footer id="post-meta" class="group">
-<div><span>Posted on </span> {{ date|date:"M j Y" }}</div>
+<div><span>Posted on </span> {{ date|date:"M j Y" }} by <a href="http://www.twitter.com/chriseidhof/">@chriseidhof</a> </div>
 
 <section id="sharing">
 <a class="twitter" href="https://twitter.com/share"><span class="icon-twitter-circled"></span></a>
