--- a/templates/post.html
+++ b/templates/post.html
@@ -15,7 +15,7 @@
 		<h2 class="headline">{{ headline }} </h2>
     {% endif %}
 	</header>
-	<section id="post-body">
+	<section class="postbody">
 		{% block body %}
 		This is where the post contents is.
 		{% endblock body %}
