--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,9 +41,11 @@ font-variant: normal; text-transform: none; line-height: 1em;
 /*=========================================
 General Spacing
 =========================================== */
-.post h1, h3, h4, h5, p, .post-body ul, #post-list li, pre {
+.post h1, h3, h4, h5, p, .postbody ul, #post-list li, pre {
 margin-bottom: 20px;
 }
+
+.postbody li	{ list-style-type:disc; list-style-position:outside; }
 
 /*=========================================
 Base
@@ -102,7 +104,7 @@ ul 	{ margin:0; padding:0; }
 li	{ list-style-type:circle; list-style-position:inside; }
 
 /* Line Height */
-#post-body, p { line-height:1.7; }
+.postbody, p { line-height:1.7; }
 
 /*b, strong { font-weight: 600; }*/
 em, i { font-style: italic; }
